# OverEngBE

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  manage.py  pyproject.toml  ruff.toml  startup.sh
.github/: dependabot.yml
.github/workflows/: build-push-deploy.yml  build-tagged-images.yaml  code_checks.yml  deploy_to_azure_container_app.yml  image-build-push.yml
observability/: config.alloy  otel-collector-config.yaml  tempo.yaml
over_engineered/: asgi.py  settings.py  urls.py  wsgi.py
src/over_engineered/: __init__.py  settings.py  urls.py
swagger/: api.yaml
users/: models.py  urls.py
users/migrations/: 0001_initial.py  0002_alter_userprofile_id_alter_userprofile_profile_pic.py
users/views/: __init__.py  profile.py
